1.6.5openmpi
	- enforce building position independent code (PIC) for the static
	  version of the OTF library
	  (so it's possible to add these objects to 3rd-party shared libraries)

1.6.4openmpi
	- enhanced reading of process group definition records

1.6.3stingray	
	- fixed errors while reading the long OTF format
	- updated python interface

1.6.2stingray
	- fixed build errors on SUN Solaris with older GNU compilers
	- fixed skewed arguments for OTF_WStream_writeEndFileOperation
	- fixed progress calculation of otfprofile
	- improved performance of otfprofile - especially handling of huge
	  tracefiles

1.6.1stingray
	- added tool 'otfinfo' which can be used to get basic information of
	  a trace
	- fix invalid pointer dereferences in OTF_stripFilename() and 
	  OTF_File_open_zlevel()
	- fixed doxygen documentation: add OTF_Handler.h to package

1.6stingray
	- added tool 'otfshrink' which can be used to reduce a trace to
	  specified processes
	- introduced an error variable (otf_errno, otf_strerr) that indicates
	  whether an error occurred or not
	- fixed build dependencies of otfprofile
	- added file operation types OTF_FILEOP_DUP, OTF_FILEOP_SYNC,
	  OTF_FILEOP_LOCK, and OTF_FILEOP_UNLOCK
	- changed datatype for sent/received data volume of collective
	  operation begin/end records from 'uint32_t' to 'uint64_t'
	- replaced usage of PATH_MAX by VT_PATH_MAX to avoid compile errors

1.5.2dolphin
	- adapted python bindings to the current API (related to new record
	  types)
	- if possible, otfprofile creates a PS-file
	- fixed VPATH issue, when using python bindings
	- fixed infinite recursion in python wrappers
	  pyOTF_COUNTER_VARTYPE_ISSIGNED and pyOTF_COUNTER_VARTYPE_ISUNSIGNED

1.5.1dolphin
	- corrected package preparation for libtool
	- build shared OTF library by default
	- added version information to shared OTF library

1.5
	- added file operation begin/end records
	- added file operation types OTF_FILEOP_UNLINK, OTF_FILEOP_RENAME,